2008-11-08  kitone  <kitone@gna.org>

	* src/ExtensionManager.cc:
	Add a test in load_path.

2008-11-07  kitone  <kitone@gna.org>

	* src/formats/AdvancedSubStationAlpha.h:
	* src/formats/SubStationAlpha.h:
	Add line break policy option: soft, hard, intelligent.

2008-11-07  kitone  <kitone@gna.org>

	* src/Config.cc:
	* src/Config.h:
	Add value comment to set_value_* functions.

2008-11-06  kitone  <kitone@gna.org>

	* plugins/actions/videoplayermanagement/VideoPlayerManagement.cc:
	* plugins/actions/wavefrommanagement/WaveformManagement.cc:
	Remove menu Video and Waveform already create in MenuBar.

2008-11-06  kitone  <kitone@gna.org>

	* plugins/actions/dialoguize/Dialoguize.cc:
	* plugins/actions/italicize/Italicize.cc:
	* share/menubar.xml:
	Create placeholder 'text-formatting' for Italicize and Dialoguize.

2008-11-06  kitone  <kitone@gna.org>

	* prepare-po.sh:
	Add plugins directory.

2008-11-05  kitone  <kitone@gna.org>

	* configure.in:
	Fix PACKAGE_PLUGIN_DIR.

	* plugins/actions/changeframerate/Makefile.am:
	* plugins/actions/configurekeyboardshortcuts/ConfigureKeyboardShortcuts.cc:
	* plugins/actions/configurekeyboardshortcuts/Makefile.am:
	* plugins/actions/errorchecking/ErrorCheckingPlugin.cc:
	* plugins/actions/errorchecking/ErrorCheckingPreferences.h:
	* plugins/actions/errorchecking/Makefile.am:
	* plugins/actions/findandreplace/FindAndReplace.cc:
	* plugins/actions/findandreplace/Makefile.am:
	* plugins/actions/movesubtitles/Makefile.am:
	* plugins/actions/movesubtitles/MoveSubtitles.cc:
	* plugins/actions/preferences/Makefile.am:
	* plugins/actions/preferences/PreferencesPlugin.cc:
	* plugins/actions/scalesubtitles/Makefile.am:
	* plugins/actions/scalesubtitles/ScaleSubtitles.cc:
	* plugins/actions/spellchecking/Makefile.am:
	* plugins/actions/spellchecking/SpellChecking.cc:
	* plugins/actions/splitdocument/Makefile.am:
	* plugins/actions/splitdocument/SplitDocument.cc:
	* plugins/actions/styleeditor/Makefile.am: